01-canary-weight/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary
  labels:
    app: demo
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx 
  rules:
    - host: demo.local
      http:
        paths:
        - pathType: ImplementationSpecific
          path: "/"
          backend:
            service:
              name: demo-v2
              port:
                number: 80
